--- a/css/tracnghiem.css
+++ b/css/tracnghiem.css
@@ -1162,4 +1162,21 @@ label:hover .tooltip, .has-tooltip:hover .tooltip {
 .back-icon {
     font-size: 1.1em;
     font-weight: bold;
+}
+
+@media (max-width: 800px) {
+    .all-questions-searchbar {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 10px;
+    }
+    .all-questions-searchbar input[type="text"] {
+        max-width: 100%;
+        width: 100%;
+    }
+    .show-answers-btn,
+    .back-to-selection-btn {
+        width: 100%;
+        justify-content: center;
+    }
 } 
